New CSS: simple measures to render Kilians (thanks) admonitions testcase correctly.
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2516 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1355,26 +1355,26 @@ a:hover .name, a:focus .name, a:active .name,
     color: #333;
 }
 
-.admonition h6 {
+.admonition > h6 {
     font-weight: 600;
     vertical-align: middle;
     display: table-cell;
     height: 36px;
 }
 
-.tip h6 {
+.tip > h6 {
     color: #439539;
 }
 
-.note h6 {
+.note > h6 {
     color: #333;
 }
 
-.important h6 {
+.important > h6 {
     color: #BB7B03;
 }
 
-.warning h6, .caution h6 {
+.warning > h6, .caution > h6 {
     color: #8C0000;
 }
 
