New CSS: Few more admonitions refinements
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2517 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1333,7 +1333,7 @@ a:hover .name, a:focus .name, a:active .name,
     background: #FFF url(../images/dots-yellow.png) repeat-x scroll top;
 }
 
-.note ul {
+.note ul, .note .orderedlist, .warning ul, .warning .orderedlist {
     color: #666;
 }
 
@@ -1342,17 +1342,13 @@ a:hover .name, a:focus .name, a:active .name,
     background: #FFF url(../images/dots-orange.png) repeat-x scroll top;
 }
 
-.important ul {
+.important ul, .important .orderedlist {
     color: #BB7B03;
 }
 
 .warning, .caution {
     border-color: #8C0000;
     background: #FFF url(../images/dots-red.png) repeat-x scroll top;
-}
-
-.warning ul, .warning ul {
-    color: #333;
 }
 
 .admonition > h6 {
