New CSS: Style blockquotes & highlights
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2520 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1444,33 +1444,33 @@ p, .simplelist td {
     margin: 10px 0 0;
 }
 
-.abstract {
+.abstract, .highlights {
     margin: 24px 0 0;
     font-size: 18px;
     line-height: 140%;
 }
 
-.abstract p, .toc-title {
+.abstract p, .highlights p, .toc-title {
     color: #333;
 }
 
-.abstract p:first-child {
+.abstract p:first-child, .highlights p:first-child {
     margin-top: 0;
 }
 
-.abstract .titlepage {
+.abstract .titlepage, .highlights .titlepage {
     display: none;
 }
 
-.abstract .titlepage + p {
+.abstract .titlepage + p, .highlights .titlepage + p {
     margin-top: 0;
 }
 
-.abstract li:first-child p:first-child {
+.abstract li:first-child p:first-child, .highlights li:first-child p:first-child {
     margin-top: 0;
 }
 
-.abstract + .authorgroup {
+.abstract + .authorgroup, .highlights + .authorgroup {
     margin: 10px 0;
 }
 
@@ -1970,6 +1970,15 @@ div.itemizedlist {
     font-size: 20px;
     font-style: italic;
     color: #666;
+}
+
+.blockquote p {
+    font-style: italic;
+    color: #333;
+}
+
+div.blockquote {
+    margin: 17px 35px;
 }
 
 
