New CSS: some very minor corrections to the positioning of a few captioned block elements
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2563 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1330,7 +1330,7 @@ a:hover .name, a:focus .name, a:active .name,
 
 .note {
     border-color: #666;
-    background: #FFF url(../images/dots-yellow.png) repeat-x scroll top;
+    background: #FFF url(../images/dots-darkgray.png) repeat-x scroll top;
 }
 
 .note ul, .note .orderedlist, .warning ul, .warning .orderedlist {
@@ -1820,7 +1820,7 @@ a:hover code, a:focus code, a:active code {
 }
 
 .itemizedlist-title {
-    margin: 24px 0 -10px;
+    margin: 24px 0 -41px;
 }
 
 .table-title {
@@ -1828,7 +1828,7 @@ a:hover code, a:focus code, a:active code {
 }
 
 .variablelist-title {
-    margin: 24px 0 -53px;
+    margin: 24px 0 -50px;
 }
 
 
