New CSS: Some more spacing below individual question entries and grouping Q&A divs
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2565 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1959,7 +1959,11 @@ ul {
 }
 
 .qandaentry {
-    margin-bottom: 35px;
+    margin-bottom: 45px;
+}
+
+.qandadiv {
+    margin: 0 0 10px 0;
 }
 
 .answer .table-title, .answer .screen-wrap, .answer .variablelist {
