New CSS: remove dotted outlines for focused elements from all bubbles
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2601 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -103,7 +103,7 @@ html, body {
     padding: 0;
 }
 
-#_toolbar *, #_header * {
+#_toolbar *, #_header *, .bubble * {
     outline: 0;
 }
 
@@ -754,7 +754,6 @@ html, body {
     background-color: #FFF;
     border: 1px solid #CCE9A7;
     float: left;
-    outline: none;
     z-index: 0;
 }
 
