New CSS: two small improvements to the styles for Q&A questions
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2638 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1428,7 +1428,7 @@ em, i, .guimenu {
     font-style: italic;
 }
 
-em .guimenu, i .guimenu {
+em .guimenu, i .guimenu, .question em {
     font-style: normal; /* Don't use italics within italics... */
 }
 
@@ -2029,6 +2029,11 @@ div.itemizedlist {
     font-style: italic;
     color: #666;
 }
+
+.question p + p {
+    margin-top: 2px;
+}
+
 
 .blockquote p {
     font-style: italic;
