New CSS: use different monospace font stack, as a consequence of the non-existent, thus unusable Droid Sans Mono Bold font
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2640 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1571,7 +1571,7 @@ p a:visited {
 }
 
 code, .command {
-    font-family: 'Droid Sans Mono', monospace;
+    font-family: 'DejaVu Sans Mono', 'DejaVuSansMono', Menlo, 'Andale Mono', monospace;
     font-weight: normal;
     padding: 0 4px;
     border-bottom: 1px solid #C1C1C3;
@@ -1618,7 +1618,7 @@ code {
 }
 
 .screen {
-    font: normal 13px 'Droid Sans Mono', monospace;
+    font: normal 13px 'DejaVu Sans Mono', 'DejaVuSansMono', Menlo, 'Andale Mono', monospace;
     color: #333;
     line-height: 125%;
     display: block;  
