--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -59,7 +59,7 @@ a {
 
 body {
     background-color: #FFF;
-    font-family: 'Open Sans', Helvetica, FreeSans, sans-serif;
+    font-family: 'Open Sans', 'DejaVu Sans', 'Verdana', sans-serif;
     line-height: 140%;
 }
 
@@ -1571,7 +1571,7 @@ p a:visited {
 }
 
 code, .command {
-    font-family: 'DejaVu Sans Mono', 'DejaVuSansMono', Menlo, 'Andale Mono', monospace;
+    font-family: 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace;
     font-weight: normal;
     padding: 0 4px;
     border-bottom: 1px solid #C1C1C3;
@@ -1618,7 +1618,7 @@ code {
 }
 
 .screen {
-    font: normal 13px 'DejaVu Sans Mono', 'DejaVuSansMono', Menlo, 'Andale Mono', monospace;
+    font: normal 13px 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace;
     color: #333;
     line-height: 125%;
     display: block;  
