--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1661,7 +1661,7 @@ code {
 
 .callout {
     display: inline-block;
-    padding: 1px 5px 1.5px;
+    padding: 1px 6px 1.5px 5px;
     margin: 0 5px;
     border-radius: 10px;
     background-color: #439539;
