New HTML: use monospace font for keycaps to make it easier to discriminate l/I/1 etc. (thanks, Tanja)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2739 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1570,7 +1570,7 @@ p a:visited {
     color: #5C3566;
 }
 
-code, .command {
+code, .command, .keycap {
     font-family: 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace;
     font-weight: normal;
     padding: 0 4px;
