New HTML: small improvement to keycap alignment and font size
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2764 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1803,7 +1803,7 @@ div.figure .name, div.figure .permalink {
 
 .keycap {
     color: #333;
-    font-size: 13px;
+    font-size: 0.6em;
     padding: 0px 5px;
     background-color: #EFEFF0;
     border-radius: 3px;
@@ -1812,6 +1812,7 @@ div.figure .name, div.figure .permalink {
     border-style: solid;
     font-weight: normal;
     white-space: nowrap;
+    vertical-align: 0.2em;
 }
 
 a:hover .keycap, a:focus .keycap, a:active .keycap,
