New HTML: make keycap font-size a little larger again
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2766 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -205,7 +205,8 @@ html, body {
     height: 49px;
 }
 
-#_header .crumbs .single-crumb:hover, #_header .crumbs .single-crumb:focus, #_header .crumbs .single-crumb:active {
+#_header .crumbs .single-crumb:hover, #_header .crumbs .single-crumb:focus,
+#_header .crumbs .single-crumb:active {
     background-color: #999;
     color: #FFF;
 }
@@ -1803,7 +1804,7 @@ div.figure .name, div.figure .permalink {
 
 .keycap {
     color: #333;
-    font-size: 0.6em;
+    font-size: 0.75em;
     padding: 0px 5px;
     background-color: #EFEFF0;
     border-radius: 3px;
